<resources>
    <string name="app_name">Sleep Well</string>
    <string name="title_name">Sleep Well</string>
    <string name="main_title">Sleep Well</string>
    <string name="main_sleeps_button_text">Моя история сна</string>
    <string name="main_about_button_text">О приложении</string>
    <string name="main_logout_button_text">Выйти из аккаунта</string>
    <string name="add_sleep_start_text">Начало сна</string>
    <string name="add_sleep_end_text">Конец сна</string>
    <string name="add_sleep_date_text">Дата:</string>
    <string name="add_sleep_time_text">Время:</string>
    <string name="add_sleep_rating_text">Рейтинг:</string>
    <string name="add_sleep_button_text">Добавить</string>
    <string name="about_title">О приложении</string>
    <string name="about_text">Приложение создано для ведения истории и качества Вашего сна.</string>
    <string name="wrong_input">Неправильный ввод</string>
    <string name="empty_text" />
    <string name="non_empty_fields_message">Нужно заполнить оба поля</string>
    <string name="bad_login_or_password_message">Неправильный логин или пароль</string>
    <string name="login_error_message">Ошибка при выходе</string>
    <string name="success_registration_messsage">Регистрация прошла успешна</string>
    <string name="login_already_exist_message">Пользователь с таким логином уже существует</string>
    <string name="empty_sleeps_message">Записей о снах пока нет.</string>
    <string name="input_login">Логин</string>
    <string name="input_password">Пароль</string>
    <string name="login">Вход</string>
    <string name="register">Регистрация</string>
    <string name="logout">Выйти</string>
    <string name="sleep_times_separator">-</string>
</resources>